Novas rotas e edições na documentação
